[package]
name = "redflake"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.56", features = ["derive"] }
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros", "net", "signal", "sync", "io-util", "time"] }
bytes = "1.11.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
chrono = "0.4.43"
